--- a/posts.html
+++ b/posts.html
@@ -21,7 +21,6 @@
 </head>
 
 <body class="bg-primary-bg d-flex flex-column min-vh-100">
-
     <div class="container-fluid px-0">
         <header class="d-flex flex-wrap justify-content-center py-3 px-4 bg-primary">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
@@ -68,81 +67,53 @@
 
     </div>
 
-    <div class="container-fluid mt-3">
+
+    <!-- card that has title and description preview at the botom -->
+    <div class="container-fluid mt-5 mb-5">
+        <div class="row">
+            <div class="col-11 mb-3 mx-auto text-end">
+                <button class="btn btn-secondary w-25" type="submit">New Post</button>
+            </div>
+        </div>
         <div class="row">
             <div class="col-11 mx-auto">
-                <h5><a href="index.html" class="text-dark">&#60Back</a> </h5>
-            </div>
-        </div>
+                <div class="card bg-primary text-white mb-3 py-3" style="height: 30vh;">
+                    <div class="card-body">
+                        <h4 class="card-title fw-bold text-wrap" style="padding-right: 4rem;">Lorem ipsum dolor sit
+                            amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit</h4>
+                        <p class="card-text"> Posted by User123</p>
+                        <h5 class="card-text text-wrap" style="padding-right: 4rem;">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Felis eget velit aliquet sagittis. Lorem ipsum dolor sit
+                            amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Felis eget velit aliquet sagittis.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Felis eget velit aliquet sagittis.
+                        </h5>
 
-        <div class="row mb-2">
-            <div class="col-11 mx-auto">
-                <div class="post bg-primary text-white">
-                    <div class=" title">
-                        Lorem ipsum dolor sit amet?
+                        <p class="card-text fw-bold" style="position: absolute; bottom: 1rem;"> Reply</p>
                     </div>
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna aliqua.
+                </div>
+
+                <div class="card bg-primary text-white mb-3 py-3" style="height: 30vh;">
+                    <div class="card-body">
+                        <h4 class="card-title fw-bold text-wrap" style="padding-right: 4rem;">Lorem ipsum dolor sit
+                            amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit</h4>
+                        <p class="card-text"> Posted by User123</p>
+                        <h5 class="card-text text-wrap" style="padding-right: 4rem;">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Felis eget velit aliquet sagittis.
+                        </h5>
+
+                        <p class="card-text fw-bold" style="position: absolute; bottom: 1rem;"> Reply</p>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-11 mx-auto">
-                <h3 class="my-0"> 3 respnoses</h3>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-11 mx-auto">
-                <div class="break"></div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="row">
-        <div class="col-11 mx-auto">
-            <div class="responses mb-5">
-                <div class="response bg-primary text-white">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et
-                    dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur.
-                    <div>
-                    </div>
-                </div>
-                <div class="response bg-primary text-white">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et
-                    dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur.
-                    <div>
-                    </div>
-                </div>
-                <div class="response bg-primary text-white">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et
-                    dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur.
-                    <div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     </div>
 
     <footer class=" bg-primary mt-auto">
